# Karina

./: CMakeLists.txt  README.md  main.cpp  mainWindow.h  meson.build
WindowWidgets/: headerBar.h
WindowWidgets/HeaderBarWidgets/: menuButton.h
src/: MainWindow.vala  main.vala
src/HeaderBar/: HeaderBar.vala
